{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 71,
  "lineage": "f2169054-4029-3d38-3f85-05660cf9d131",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d32cea72d560d582",
            "associate_with_private_ip": "172.16.10.101",
            "association_id": "eipassoc-075d0c30873e05935",
            "domain": "vpc",
            "id": "eipalloc-0d32cea72d560d582",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a35cadd84786ddd9",
            "private_dns": "ip-172-16-10-101.ec2.internal",
            "private_ip": "172.16.10.101",
            "public_dns": "ec2-34-232-122-190.compute-1.amazonaws.com",
            "public_ip": "34.232.122.190",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.interfejs",
            "aws_security_group.allow_web",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancja",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085925f297f89fce1",
            "arn": "arn:aws:ec2:us-east-1:313035165772:instance/i-0c3c069ce134d2dca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c3c069ce134d2dca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a35cadd84786ddd9"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a35cadd84786ddd9",
            "private_dns": "ip-172-16-10-101.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.10.101",
            "public_ip": "34.232.122.190",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb506652f16e4dd0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039e114001bb5174e",
            "tags": {
              "Name": "Instance2"
            },
            "tags_all": {
              "Name": "Instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3c97e05f9d9f180"
            ]
          },
          "dependencies": [
            "aws_network_interface.interfejs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313035165772:internet-gateway/igw-09414e3c675b6fed7",
            "id": "igw-09414e3c675b6fed7",
            "owner_id": "313035165772",
            "tags": {
              "Name": "Gateway1"
            },
            "tags_all": {
              "Name": "Gateway1"
            },
            "vpc_id": "vpc-0dd9507405cc2e058"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interfejs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313035165772:network-interface/eni-0a35cadd84786ddd9",
            "id": "eni-0a35cadd84786ddd9",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:16:d4:d7:3d:95",
            "owner_id": "313035165772",
            "private_ip": "172.16.10.101",
            "private_ip_list": [
              "172.16.10.101"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.10.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d3c97e05f9d9f180"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039e114001bb5174e",
            "tags": {
              "Name": "Interface1"
            },
            "tags_all": {
              "Name": "Interface1"
            }
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313035165772:route-table/rtb-050ccccd17e48b249",
            "id": "rtb-050ccccd17e48b249",
            "owner_id": "313035165772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09414e3c675b6fed7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Routing_Table"
            },
            "tags_all": {
              "Name": "Routing_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9507405cc2e058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d2535ea59726197",
            "route_table_id": "rtb-050ccccd17e48b249",
            "subnet_id": "subnet-039e114001bb5174e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313035165772:security-group/sg-0d3c97e05f9d9f180",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3c97e05f9d9f180",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "313035165772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_traffic"
            },
            "tags_all": {
              "Name": "allow_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd9507405cc2e058"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313035165772:subnet/subnet-039e114001bb5174e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039e114001bb5174e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "313035165772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet1"
            },
            "tags_all": {
              "Name": "Subnet1"
            },
            "vpc_id": "vpc-0dd9507405cc2e058"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:313035165772:vpc/vpc-0dd9507405cc2e058",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-01d8e841f660a73f6",
            "default_route_table_id": "rtb-0cfcf0b86e0694449",
            "default_security_group_id": "sg-0a6ee2be249503090",
            "dhcp_options_id": "dopt-019ce48f926c61e15",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd9507405cc2e058",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cfcf0b86e0694449",
            "owner_id": "313035165772",
            "tags": {
              "Name": "VPC1"
            },
            "tags_all": {
              "Name": "VPC1"
            }
          }
        }
      ]
    }
  ]
}